# Cmd-Center-V2

./: .gitignore  README.md  package-lock.json  package.json
Source of Truth/: document-export-5-8-2026-5_17_03-PM.md
Source of Truth/Dev Docs/: ARCHITECTURE.md  BACKLOG_FROM_CODEX.md  CONTEXT_HANDOFF.md  IMPLEMENTATION_LOG.md  MANIFEST.md  README.md  RUNBOOK.md
scripts/: db_viewer.py
skills/: finalize.md  macro.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AutoResizeTextarea.tsx  ChatPanel.tsx  CountryPanel.tsx  FilterBar.tsx  MarketStrip.tsx  WorldMap.tsx
src/data/: sampleData.ts
src/services/: contextLabels.ts  liveData.ts  openRouter.ts  storage.ts
src/types/: domain.ts
src/utils/: articleWeight.ts
